--- a/src/lib/PacmanCovid/Food/style.scss
+++ b/src/lib/PacmanCovid/Food/style.scss
@@ -18,3 +18,15 @@
     background-color: transparent;
   }
 }
+.path {
+  display: block;
+  position: absolute;
+  width: 12px; 
+  height: 12px; 
+  margin-left: -6px; 
+  margin-top: -6px; 
+  border-radius: 100%; 
+  background-color: red;
+  border: 2px solid white; 
+  box-shadow: 0 0 8px rgba(255, 0, 0, 0.8); 
+}
